# rxn-onmt-models

./: .buildinfo  .bumpversion.cfg  .dockerignore  .travis.yml  README.html  README.md  api.html  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: docker.yaml  docker.yml  docs.yaml  pypi.yaml  tests.yaml
_modules/: index.html
_modules/rxn/onmt_models/: augmentation.html  prediction_collapser.html  prediction_utils.html  training_files.html  translation.html  utils.html
_modules/rxn/onmt_models/scripts/: rxn_onmt_preprocess.html  rxn_plan_training.html
_sources/: README.md.txt  index.md.txt
deprecated/: translate_onmt.py  translate_postprocess.py  translate_preprocess.py  translate_standardize.py  translate_tokenize.py  tunerxn_evaluate.py  tunerxn_translate.py
docker/: Dockerfile  docker_entrypoint.sh  requirements.txt
docs/source/: api.rst  conf.py
resources/training_scripts/: README.md  continue_training_forward_or_retro.sh  multitask.md  preprocess_forward.sh  preprocess_retro.sh  train_forward_or_retro.sh  translate.sh
rxn_onmt_utils/: __init__.py  internal_translation_utils.py  model_introspection.py  model_resize.py  torch_utils.py  translator.py  utils.py
rxn_onmt_utils/from_tunerxn/: translate_onmt.py  translate_postprocess.py  translate_preprocess.py  translate_standardize.py  translate_tokenize.py  utils.py
rxn_onmt_utils/rxn_models/: augmentation.py  classification_translation.py  context_metrics.py  defaults.py  forward_metrics.py  forward_or_retro_translation.py  metrics.py  metrics_calculator.py  onmt_train_command.py  prediction_collapser.py  prediction_utils.py  reaction_combiner.py  retro_metrics.py  run_metrics.py  tokenize_file.py  translate.py  utils.py
rxn_onmt_utils/scripts/: canonicalize_file.py  combine_precursors_and_products.py  compute_retro_metrics.py  dataset_stats.py  ensure_data_dimension.py  extend_model_with_vocab.py  forward_translation.py  join_data_files.py  parse_metrics_into_csv.py  plan_training.py  prepare_context_metrics.py  prepare_forward_metrics.py  prepare_retro_metrics.py  reorder_retro_predictions_class_token.py  retro_translation.py  rxn_evaluate_metrics.py  rxn_forward_screen.py  rxn_onmt_augment.py  rxn_onmt_continue_training.py  rxn_onmt_finetune.py  rxn_onmt_preprocess.py  rxn_onmt_train.py  rxn_plan_training.py  rxn_prepare_data.py  rxn_translate.py  strip_model.py  translate.py  tunerxn_continue_training.py  tunerxn_evaluate.py  tunerxn_finetune.py  tunerxn_prepare_data.py  tunerxn_preprocess.py  tunerxn_train.py  tunerxn_translate.py
rxn_onmt_utils/tests/: test_prediction_utils.py  test_utils.py
rxn_onmt_utils/tests/rxn_models/: test_augmentation.py  test_context_metrics.py  test_metrics.py  test_prediction_collapser.py  test_reaction_combiner.py  test_tokenize_file.py  test_utils.py
rxn_onmt_utils/tests/scripts/: test_ensure_data_dimension.py  test_join_data_files.py  test_reorder_retro_files.py
scripts/: strip_model.py  translate.py
src/rxn/onmt_models/: __init__.py  defaults.py  forward_predictor.py  training_files.py  translation.py
src/rxn/onmt_models/scripts/: dataset_stats.py  rxn_forward_screen.py  rxn_onmt_augment.py  rxn_onmt_continue_training.py  rxn_onmt_finetune.py  rxn_onmt_preprocess.py  rxn_onmt_strip_checkpoints.py  rxn_onmt_train.py  rxn_plan_training.py  rxn_prepare_data.py  rxn_translate.py
src/rxn/onmt_training/: __init__.py  augmentation.py  internal_translation_utils.py  onmt_train_command.py  training_files.py  translation.py  utils.py
src/rxn/onmt_training/rxn_models/: defaults.py  forward_predictor.py  metrics_calculator.py  metrics_files.py  onmt_train_command.py  prediction_collapser.py  prediction_utils.py  tokenize_file.py  translate.py  utils.py
src/rxn/onmt_training/scripts/: dataset_stats.py  ensure_data_dimension.py  extend_model_with_vocab.py  join_data_files.py  prepare_context_metrics.py  prepare_forward_metrics.py  prepare_retro_metrics.py  reorder_retro_predictions_class_token.py  rxn_evaluate_metrics.py  rxn_forward_screen.py  rxn_onmt_augment.py  rxn_onmt_continue_training.py  rxn_onmt_finetune.py  rxn_onmt_preprocess.py  rxn_onmt_train.py  rxn_plan_training.py  rxn_prepare_data.py  rxn_translate.py  translate.py
src/rxn/onmt_utils/: __init__.py  model_resize.py  torch_utils.py
src/rxn/onmt_utils/rxn_models/: forward_predictor.py  metrics_calculator.py  onmt_train_command.py  translate.py
src/rxn/onmt_utils/scripts/: dataset_stats.py  extend_model_with_vocab.py  prepare_context_metrics.py  prepare_forward_metrics.py  prepare_retro_metrics.py  reorder_retro_predictions_class_token.py  rxn_evaluate_metrics.py  rxn_forward_screen.py  rxn_onmt_augment.py  rxn_onmt_continue_training.py  rxn_onmt_finetune.py  rxn_onmt_preprocess.py  rxn_onmt_train.py  rxn_plan_training.py  rxn_prepare_data.py  rxn_translate.py  translate.py
tests/: test_augmentation.py  test_prediction_collapser.py  test_prediction_utils.py  test_training_files.py  test_utils.py
tests/rxn_models/: test_augmentation.py  test_context_metrics.py  test_metrics.py  test_prediction_collapser.py  test_tokenize_file.py  test_utils.py
tests/scripts/: test_ensure_data_dimension.py  test_join_data_files.py  test_reorder_retro_files.py
