[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true
exclude = [
    "deprecated"
]

[[tool.mypy.overrides]]
module = [
    "onmt.*",
    "numpy.*",
    "pandas.*",
    "pytest.*",
    "rdkit.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
