[metadata]
name = rxn_onmt_utils
version = attr: rxn_onmt_utils.__version__
description = Utilities related to the use of OpenNMT
author = IBM RXN team
long_description = file: README.md

[options]
python_requires = >= 3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    attrs>=21.2.0
    click>=7.0
    pandas>=1.1.0
    rxn-chemutils>=0.3.16
    rxn-opennmt-py>=1.0.3
    rxn-reaction-preprocessing>=0.4.5
    rxn-utilities>=0.8.11

[options.package_data]
rxn_onmt_utils =
    py.typed

[options.extras_require]
dev =
    bump2version>=1.0.1
    flake8>=3.8.4
    mypy>=0.910
    pytest>=5.3.4
    types-setuptools>=57.4.14
    yapf>=0.31.0

[options.entry_points]
console_scripts =
    rxn-strip-opennmt-model = rxn_onmt_utils.scripts.strip_model:strip_model
    rxn-combine-precursors-and-products = rxn_onmt_utils.scripts.combine_precursors_and_products:main
    rxn-prepare-data = rxn_onmt_utils.scripts.tunerxn_prepare_data:main
    rxn-onmt-preprocess = rxn_onmt_utils.scripts.tunerxn_preprocess:main
    rxn-onmt-train = rxn_onmt_utils.scripts.tunerxn_train:main
    rxn-onmt-continue-training = rxn_onmt_utils.scripts.tunerxn_continue_training:main
