[metadata]
name = rxn-onmt-utils
version = attr: rxn_onmt_utils.__version__
description = Utilities related to the use of OpenNMT
author = IBM RXN team
long_description = file: README.md

[options]
python_requires = >= 3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    attrs>=21.2.0
    click>=8.0
    pandas>=1.1.0
    rxn-chem-utils>=1.1.0
    rxn-opennmt-py>=1.1.1
    rxn-reaction-preprocessing>=2.0.2
    rxn-utils>=1.1.7

[options.package_data]
rxn_onmt_utils =
    py.typed

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.8.4
    freezegun>=1.1.2
    isort>=5.10.1
    mypy>=0.910
    pytest>=5.3.4
    types-setuptools>=57.4.14

[options.entry_points]
console_scripts =
    rxn-combine-precursors-and-products = rxn_onmt_utils.scripts.combine_precursors_and_products:main
    rxn-dataset-stats = rxn_onmt_utils.scripts.dataset_stats:main
    rxn-forward-screen = rxn_onmt_utils.scripts.rxn_forward_screen:main
    rxn-onmt-augment = rxn_onmt_utils.scripts.rxn_onmt_augment:main
    rxn-onmt-continue-training = rxn_onmt_utils.scripts.rxn_onmt_continue_training:main
    rxn-onmt-finetune = rxn_onmt_utils.scripts.rxn_onmt_finetune:main
    rxn-onmt-preprocess = rxn_onmt_utils.scripts.rxn_onmt_preprocess:main
    rxn-onmt-train = rxn_onmt_utils.scripts.rxn_onmt_train:main
    rxn-parse-metrics-into-csv = rxn_onmt_utils.scripts.parse_metrics_into_csv:main
    rxn-plan-training = rxn_onmt_utils.scripts.rxn_plan_training:main
    rxn-prepare-data = rxn_onmt_utils.scripts.rxn_prepare_data:main
    rxn-prepare-context-metrics = rxn_onmt_utils.scripts.prepare_context_metrics:main
    rxn-prepare-forward-metrics = rxn_onmt_utils.scripts.prepare_forward_metrics:main
    rxn-prepare-retro-metrics = rxn_onmt_utils.scripts.prepare_retro_metrics:main
    rxn-strip-opennmt-model = rxn_onmt_utils.scripts.strip_model:strip_model
    rxn-translate = rxn_onmt_utils.scripts.rxn_translate:main

[flake8]
extend-ignore = E203, E501
