[metadata]
name = rxn-onmt-models
version = attr: rxn.onmt_models.__version__
description = Training of OpenNMT-based RXN models
author = IBM RXN team
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rxn4chemistry/rxn-onmt-models
project_urls =
    Documentation = https://rxn4chemistry.github.io/rxn-onmt-models/
    Repository = https://github.com/rxn4chemistry/rxn-onmt-models
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    attrs>=21.2.0
    click>=8.0
    rxn-chem-utils>=1.1.4
    rxn-reaction-preprocessing>=2.0.2
    rxn-utils>=1.1.9
    rxn-onmt-utils @ git+https://github.com/rxn4chemistry/rxn-onmt-utils.git@6c7b563e17cae6d34cd4e9ce69cc85a791b7dc16 #rxn-onmt-utils without rxn-opennmt-py depedency
    OpenNMT-py>=3.5.1 # official onmt

[options.packages.find]
where = src

[options.package_data]
rxn.onmt_models =
    py.typed

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.8.4
    freezegun>=1.1.2
    isort>=5.10.1
    mypy>=0.910
    pytest>=5.3.4
    types-setuptools>=57.4.14
rdkit =
    # install RDKit. This is not as a setup dependency in order not to install it
    # in downstream packages and avoid potential conflicts with the conda
    # installation of RDKit
    rdkit-pypi>=2021.3.2 ; python_version<"3.7"
    rdkit>=2022.3.4 ; python_version>="3.7"

[options.entry_points]
console_scripts =
    rxn-onmt-augment = rxn.onmt_models.scripts.rxn_onmt_augment:main
    rxn-onmt-continue-training = rxn.onmt_models.scripts.rxn_onmt_continue_training:main
    rxn-onmt-finetune = rxn.onmt_models.scripts.rxn_onmt_finetune:main
    rxn-onmt-preprocess = rxn.onmt_models.scripts.rxn_onmt_preprocess:main
    rxn-onmt-strip-checkpoints = rxn.onmt_models.scripts.rxn_onmt_strip_checkpoints:main
    rxn-onmt-train = rxn.onmt_models.scripts.rxn_onmt_train:main
    rxn-plan-training = rxn.onmt_models.scripts.rxn_plan_training:main
    rxn-prepare-data = rxn.onmt_models.scripts.rxn_prepare_data:main
    rxn-translate = rxn.onmt_models.scripts.rxn_translate:main

[flake8]
extend-ignore = E203, E501
